Fix font-size on grid hover for responsive (too small)

--- a/src/styles/fall2017/fall2017.css
+++ b/src/styles/fall2017/fall2017.css
@@ -1328,7 +1328,7 @@ p.credits {
     padding: 30px; }
   .photoGrid li a div h3 {
     width: 98%;
-    font-size: .9em;
+    font-size: 2em;
     padding-top: 5px;
     line-height: 1.2em; } 
   .bio {
